--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 200vw;
 }
 
 code {
